Added CSS to remove unnecessary scrollbar at bottom of nearly every page

--- a/webapp/src/main/webapp/themes/mine-theme/theme-additions.css
+++ b/webapp/src/main/webapp/themes/mine-theme/theme-additions.css
@@ -37,3 +37,8 @@ table.im-results-table td.Protocol.url {
   max-width: 200px;
   word-break: keep-all;
 }
+
+/* In "NAVIGATION" section:
+-------------------------------*/
+
+#submenu {  margin: -2px 0px 0px -2px; }
